fixed .tabs adding useless scrollbar while the rightmost tab is active

--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,10 @@ code pre {
   background-repeat: no-repeat;
 }
 
+.tabs {
+  overflow-x: hidden;
+}
+
 .tabs .indicator {
   background-color: #E91E63;
 }
